# hexagon

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
.circleci/: config.yml
assets/: map1.map
client/: CMakeLists.txt  README.md
client/assets/: map1.map
client/src/: battle_controller.cpp  battle_controller.hpp  battle_facet.cpp  battle_facet.hpp  battling_adapter.cpp  battling_adapter.hpp  canvas.cpp  canvas.hpp  connecting_adapter.cpp  connecting_adapter.hpp  connecting_controller.cpp  connecting_controller.hpp  connecting_facet.cpp  connecting_facet.hpp  connection.cpp  connection.hpp  emrun.cpp  emrun.hpp  font_cache.cpp  font_cache.hpp  game.cpp  game.hpp  game_adapter.cpp  game_adapter.hpp  game_controller.cpp  game_controller.hpp  game_facet.cpp  game_facet.hpp  graphics.cpp  graphics.hpp  index.html  main.cpp  map_facet.cpp  map_facet.hpp  map_textures.cpp  map_textures.hpp  mouse.cpp  mouse.hpp  moved_controller.cpp  moved_controller.hpp  (+12 more)
client/src/sdl/: font.cpp  font.hpp  renderer.cpp  renderer.hpp  sdl.cpp  sdl.hpp  surface.cpp  surface.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
cmake/: appveyor.cmake  appveyor_model_test.cmake  appveyor_server.cmake  coverage.cmake  unix_test.cmake
model/: CMakeLists.txt  HexagonModelConfig.cmake
model/include/hexagon/model/: battle.hpp  connecting.hpp  map.hpp  map_algorithm.hpp  map_loader.hpp  movement.hpp  path.hpp  player.hpp  session.hpp  team.hpp  tile.hpp  unit.hpp  unit_moved.hpp  unit_movement.hpp  unit_moving.hpp  units_joining.hpp  units_moved.hpp  version.hpp  world.hpp  world_projection.hpp
model/include/hexagon/protocol/: battle_message.hpp  battle_request.hpp  joined_battle_message.hpp  login_request.hpp  login_response.hpp  map_request.hpp  map_response.hpp  message.hpp  move_message.hpp  move_request.hpp  unknown_message.hpp  version_message.hpp  world_message.hpp
model/include/hexagon/protocol/io/: battle_io.hpp  map_io.hpp  message_io.hpp  path_io.hpp  std_io.hpp  team_io.hpp  tile_io.hpp  unit_io.hpp
model/include/hexagon/state/: battling_state.hpp  connecting_state.hpp  local_state.hpp  moved_state.hpp  moving_state.hpp  world_state.hpp
model/src/: battle.cpp  battle_io.cpp  battle_message.cpp  battle_projection.cpp  battle_request.cpp  battling_state.cpp  game_projection.cpp  joined_battle_message.cpp  local_state.cpp  login_request.cpp  login_response.cpp  map.cpp  map_algorithm.cpp  map_io.cpp  map_io.hpp  map_loader.cpp  map_request.cpp  map_response.cpp  message.cpp  move_message.cpp  move_request.cpp  moving_state.cpp  path_io.cpp  team_io.cpp  team_io.hpp  tile.cpp  tile_io.cpp  unit.cpp  unit_io.cpp  unit_io.hpp  unit_moved.cpp  unit_moving.cpp  units_joining.cpp  units_moved.cpp  version_message.cpp  world_message.cpp
model/test/: CMakeLists.txt  runner.cpp  test-battle.cpp  test-battle_io.cpp  test-map.cpp
server/: CMakeLists.txt  HexagonServerConfig.cmake  README.md
server/assets/: map2.map
server/src/: battle_responder.cpp  battle_responder.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  local_state.cpp  local_state.hpp  login_responder.cpp  login_responder.hpp  main.cpp  map_loader.cpp  map_loader.hpp  move_responder.cpp  move_responder.hpp  net.hpp  preload_assets.cpp  preload_assets.hpp  responder.cpp  responder.hpp  shared_state.cpp  shared_state.hpp  version.hpp  websocket_session.cpp  websocket_session.hpp
src/: battle_facet.cpp  battle_facet.hpp  font_cache.cpp  game.cpp  game.hpp  main.cpp  map_facet.cpp  map_facet.hpp  map_textures.cpp  map_textures.hpp  mouse.hpp  unit_facet.cpp  unit_facet.hpp
src/model/: battle.cpp  battle.hpp  battle_projection.cpp  battle_projection.hpp  game_projection.cpp  game_projection.hpp  map.cpp  map.hpp  map_loader.cpp  map_loader.hpp  team.hpp  tile.cpp  tile.hpp  world.hpp
src/sdl/: font.cpp  font.hpp  renderer.hpp  sdl.cpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
